# cogram

./: .gitignore  AGENTS.md  COMPARISON.md  CONCEPT_OF_CONCEPTS.md  HOW_TO_DEMO.md  LICENSE  PITCH.md  PITCH_ONELINER.md  PITCH_PROCEDURAL.md  README.md  SUBMISSION_FORM.md  _probe_prompt_limit.py  benchmark_bakeoff.py  benchmark_bakeoff_raw.json  benchmark_bakeoff_results.md  benchmark_budget_sweep.py  benchmark_budget_sweep_results.md  benchmark_budget_sweep_retrieval.json  benchmark_budget_sweep_retrieval.py  benchmark_longmem.py  benchmark_longmem_raw.json  benchmark_longmem_raw_b300.json  benchmark_longmem_raw_b500.json  benchmark_longmem_results.md  benchmark_procedural_precision.py  benchmark_procedural_precision_results.md  benchmark_qa.py  benchmark_qa_raw.json  benchmark_qa_results.md  benchmark_results.md  extract.py  extract_swe.py  fetch_swe.py  graph_lib.py  learn.py  memory_api.py  probe_context_ceiling.py  pyproject.toml  recall.py  requirements.txt  (+4 more)
docs/: CNAME  README.md  _pick_question.py  app.js  build_web_graph.py  build_web_graph_swe.py  graph.json  index.html  style.css  test_seed_match.js
migrations/: 20260718211138_engram-schema.sql
swe_corpus/: swe_0001_Melevir__cognitive_complexity-15_transcript.md  swe_0002_Melevir__cognitive_complexity-15_transcript.md  swe_0003_Melevir__cognitive_complexity-15_transcript.md  swe_0004_Melevir__cognitive_complexity-15_transcript.md  swe_0005_Melevir__cognitive_complexity-15_transcript.md  swe_0006_Melevir__cognitive_complexity-15_transcript.md  swe_0007_Melevir__cognitive_complexity-15_transcript.md  (+593 more)
(+1 files in other folders)
